src/test/ui/pattern/usefulness/issue-50900.stderr
error[E0004]: non-exhaustive patterns: `Tag(Context::Exif, _)` not covered
  --> $DIR/issue-50900.rs:15:11
   |
LL |     match Tag::ExifIFDPointer {
   |           ^^^^^^^^^^^^^^^^^^^ pattern `Tag(Context::Exif, _)` not covered
   |
note: `Tag` defined here
  --> $DIR/issue-50900.rs:2:12
   |
LL | pub struct Tag(pub Context, pub u16);
   |            ^^^
   = note: the matched value is of type `Tag`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         Tag::ExifIFDPointer => {}
LL +         Tag(Context::Exif, _) => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
